--- a/src/home-one.html
+++ b/src/home-one.html
@@ -177,8 +177,8 @@
         <!-- header wrap -->
         <!-- banner wrap -->
         <div class="banner-wrap bg-gradient-home-banner header-top font-dm position-relative overflow-hidden">
-            <img src="images/svg/svg-diagram-1.png" alt="diagram" class="position-absolute start-5 d-none d-lg-flex" loading="lazy">
-            <img src="images/svg/svg-diagram-1.png" alt="diagram" class="position-absolute end-5 bottom-5 rotate-180 d-none d-lg-flex" loading="lazy">
+            <img src="images/svg/svg-diagram-1.png" alt="diagram" class="position-absolute start-5 d-none d-lg-flex" loading="high">
+            <img src="images/svg/svg-diagram-1.png" alt="diagram" class="position-absolute end-5 bottom-5 rotate-180 d-none d-lg-flex" loading="high">
             <div class="container maxw-1300 pt-lg-5 pt-4">
                 <div class="row gy-4 z-5 position-relative">
                     <div class="col-lg-6 h-full d-flex align-items-center">
