--- a/src/home-two.html
+++ b/src/home-two.html
@@ -264,7 +264,7 @@
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
                                 <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                    Learn more
+                                    Find out more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
                             </div>
@@ -285,7 +285,7 @@
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
                                 <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                    Learn more
+                                    Find out more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
                             </div>
@@ -307,7 +307,7 @@
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
                                 <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                    Learn more
+                                    Find out more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
                             </div>
@@ -328,7 +328,7 @@
                             <p class="text-gray-700 fw-400 mt-1">Its flexibility allows you to adapt it for any business need — from fintech and analytics tools to CRM platforms and admin.</p>
                             <div>
                                 <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                    Learn more
+                                    Find out more
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
                             </div>
