--- a/src/home-five.html
+++ b/src/home-five.html
@@ -224,7 +224,7 @@
                                 <p class="text-gray-800 pe-lg-5">Our design services starts and ends with a best-in-class experience strategy that builds brands.</p>
                                 <div>
                                     <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                        Learn more
+                                        Discover more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
                                 </div>
@@ -242,7 +242,7 @@
                                 <p class="text-gray-800 pe-lg-5">From first concept to final detail, our design is rooted in experience strategy that drives brand growth.</p>
                                 <div>
                                     <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                        Learn more
+                                        Discover more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
                                 </div>
@@ -260,7 +260,7 @@
                                 <p class="text-gray-800 pe-lg-5">Every design begins and ends with design strategy because great brands are not built by accident.</p>
                                 <div>
                                     <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                        Learn more
+                                        Discover more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
                                 </div>
@@ -278,7 +278,7 @@
                                 <p class="text-gray-800 pe-lg-5">Our design services starts and ends with a best-in-class experience strategy that builds brands.</p>
                                 <div>
                                     <a href="about.html" class="btn bg-transparent btn-lg rounded-2 p-0 text-gray-900">
-                                        Learn more
+                                        Discover more
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
                                 </div>
