--- a/src/home-four.html
+++ b/src/home-four.html
@@ -50,8 +50,7 @@
         <!-- upper header -->
         <div class="upper-header bg-darkgreen text-center font-sora">
             <p class="text-gray-900 fw-400 py-2 m-0 fs-14">Get the definite payments pricing guide for platforms   <a href="shop-1.html" class="fw-600 text-gray-900 text-decoration-underline">Shop now</a></p>
-        </div>
-        
+        </div>        
         <!-- header wrap -->
         <header class="header-wrapper w-100 z-10 py-lg-0 py-1 position-absolute">
             <nav class="navbar navbar-one navbar-expand-lg navbar-light border-0 py-0">
@@ -186,7 +185,7 @@
         <!-- banner wrap -->
         <div class="banner-wrapper position-relative overflow-hidden agency-banner">
             <div class="banner-wrapper-image position-absolute bottom-0">
-                <img src="images/banner-bg-10.webp" alt="banner" class="img-fluid" data-aos="fade-left" data-delay="200" data-aos-duration="400" loading="eager">
+                <img src="images/banner-bg-10.webp" alt="banner" class="img-fluid" loading="eager">
             </div>
             <div class="container h-100">
                 <div class="row h-100">
